[gd_scene load_steps=4 format=3 uid="uid://cn41gnfk4e8n7"]

[ext_resource type="Script" path="res://Script/crop.gd" id="1_wwifb"]
[ext_resource type="Texture2D" uid="uid://p4ia6em87nup" path="res://Art Assets/Growth/Plant Growth Spite_25.png" id="2_2k6dv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5e4e4"]
radius = 77.1038

[node name="Head" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_wwifb")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5e4e4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2k6dv")

[node name="Area2D" type="Area2D" parent="." groups=["head"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5e4e4")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
